Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INCORRECT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements_group -> LPAREN statements inner_statement RPAREN
Rule 3     statements_group -> inner_statement
Rule 4     inner_statement -> declaration
Rule 5     inner_statement -> assignment
Rule 6     inner_statement -> while
Rule 7     inner_statement -> if
Rule 8     inner_statement -> command
Rule 9     inner_statement -> procedure
Rule 10    inner_statement -> call
Rule 11    inner_statement -> empty
Rule 12    inner_statement -> cell_proc
Rule 13    inner_statement -> arithmetic_expression
Rule 14    statements -> statements statement
Rule 15    statements -> statement
Rule 16    statement -> declaration NEWLINE
Rule 17    statement -> assignment NEWLINE
Rule 18    statement -> while NEWLINE
Rule 19    statement -> if NEWLINE
Rule 20    statement -> command NEWLINE
Rule 21    statement -> procedure NEWLINE
Rule 22    statement -> call NEWLINE
Rule 23    statement -> empty NEWLINE
Rule 24    statement -> cell_proc NEWLINE
Rule 25    statement -> arithmetic_expression NEWLINE
Rule 26    declaration -> type name EQUALS expression
Rule 27    declaration -> MAP name
Rule 28    declaration -> type error
Rule 29    type -> INT
Rule 30    type -> CINT
Rule 31    type -> BOOLEAN
Rule 32    type -> CBOOLEAN
Rule 33    assignment -> name EQUALS expression
Rule 34    assignment -> name EQUALS error
Rule 35    name -> NAME
Rule 36    number -> NUMBER
Rule 37    expression -> name
Rule 38    expression -> const
Rule 39    expression -> number
Rule 40    expression -> logic_expression
Rule 41    expression -> arithmetic_expression
Rule 42    expression -> command
Rule 43    const -> TRUE
Rule 44    const -> FALSE
Rule 45    logic_expression -> LT expression expression
Rule 46    logic_expression -> GT expression expression
Rule 47    logic_expression -> NOT expression
Rule 48    logic_expression -> NOT call
Rule 49    logic_expression -> OR or_arg or_arg
Rule 50    arithmetic_expression -> INC first_ar second_ar
Rule 51    arithmetic_expression -> DEC first_ar second_ar
Rule 52    first_ar -> name
Rule 53    first_ar -> arithmetic_expression
Rule 54    first_ar -> call
Rule 55    second_ar -> name
Rule 56    second_ar -> arithmetic_expression
Rule 57    second_ar -> call
Rule 58    second_ar -> number
Rule 59    second_ar -> logic_expression
Rule 60    second_ar -> const
Rule 61    or_arg -> call
Rule 62    or_arg -> logic_expression
Rule 63    or_arg -> TRUE
Rule 64    or_arg -> FALSE
Rule 65    while -> WHILE logic_expression DO NEWLINE statements_group
Rule 66    while -> DO error
Rule 67    while -> WHILE error
Rule 68    if -> IF logic_expression NEWLINE statements_group NEWLINE ELSE statements_group
Rule 69    if -> IF error
Rule 70    procedure -> PROC NAME LBR parameters RBR NEWLINE statements_group
Rule 71    procedure -> PROC error
Rule 72    command -> command error
Rule 73    command -> LEFT
Rule 74    command -> RIGHT
Rule 75    command -> BACK
Rule 76    command -> STEP
Rule 77    command -> LOOK
Rule 78    call -> NAME LBR parameters RBR
Rule 79    cell_proc -> BAR LBR cell_arg RBR
Rule 80    cell_proc -> EMP LBR cell_arg RBR
Rule 81    cell_proc -> SET LBR cell_arg RBR
Rule 82    cell_proc -> RESET LBR cell_arg RBR
Rule 83    cell_proc -> CLR LBR cell_arg RBR
Rule 84    cell_arg -> name name number number
Rule 85    cell_proc -> BAR error
Rule 86    cell_proc -> EMP error
Rule 87    cell_proc -> SET error
Rule 88    cell_proc -> RESET error
Rule 89    cell_proc -> CLR error
Rule 90    call -> NAME error
Rule 91    empty -> <empty>
Rule 92    parameters -> parameters name
Rule 93    parameters -> name

Terminals, with rules where they appear

BACK                 : 75
BAR                  : 79 85
BOOLEAN              : 31
CBOOLEAN             : 32
CINT                 : 30
CLR                  : 83 89
DEC                  : 51
DO                   : 65 66
ELSE                 : 68
EMP                  : 80 86
EQUALS               : 26 33 34
FALSE                : 44 64
GT                   : 46
IF                   : 68 69
INC                  : 50
INCORRECT            : 
INT                  : 29
LBR                  : 70 78 79 80 81 82 83
LEFT                 : 73
LOOK                 : 77
LPAREN               : 2
LT                   : 45
MAP                  : 27
NAME                 : 35 70 78 90
NEWLINE              : 16 17 18 19 20 21 22 23 24 25 65 68 68 70
NOT                  : 47 48
NUMBER               : 36
OR                   : 49
PROC                 : 70 71
RBR                  : 70 78 79 80 81 82 83
RESET                : 82 88
RIGHT                : 74
RPAREN               : 2
SET                  : 81 87
STEP                 : 76
TRUE                 : 43 63
WHILE                : 65 67
error                : 28 34 66 67 69 71 72 85 86 87 88 89 90

Nonterminals, with rules where they appear

arithmetic_expression : 13 25 41 53 56
assignment           : 5 17
call                 : 10 22 48 54 57 61
cell_arg             : 79 80 81 82 83
cell_proc            : 12 24
command              : 8 20 42 72
const                : 38 60
declaration          : 4 16
empty                : 11 23
expression           : 26 33 45 45 46 46 47
first_ar             : 50 51
if                   : 7 19
inner_statement      : 2 3
logic_expression     : 40 59 62 65 68
name                 : 26 27 33 34 37 52 55 84 84 92 93
number               : 39 58 84 84
or_arg               : 49 49
parameters           : 70 78 92
procedure            : 9 21
program              : 0
second_ar            : 50 51
statement            : 14 15
statements           : 1 2 14
statements_group     : 65 68 68 70
type                 : 26 28
while                : 6 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (14) statements -> . statements statement
    (15) statements -> . statement
    (16) statement -> . declaration NEWLINE
    (17) statement -> . assignment NEWLINE
    (18) statement -> . while NEWLINE
    (19) statement -> . if NEWLINE
    (20) statement -> . command NEWLINE
    (21) statement -> . procedure NEWLINE
    (22) statement -> . call NEWLINE
    (23) statement -> . empty NEWLINE
    (24) statement -> . cell_proc NEWLINE
    (25) statement -> . arithmetic_expression NEWLINE
    (26) declaration -> . type name EQUALS expression
    (27) declaration -> . MAP name
    (28) declaration -> . type error
    (33) assignment -> . name EQUALS expression
    (34) assignment -> . name EQUALS error
    (65) while -> . WHILE logic_expression DO NEWLINE statements_group
    (66) while -> . DO error
    (67) while -> . WHILE error
    (68) if -> . IF logic_expression NEWLINE statements_group NEWLINE ELSE statements_group
    (69) if -> . IF error
    (72) command -> . command error
    (73) command -> . LEFT
    (74) command -> . RIGHT
    (75) command -> . BACK
    (76) command -> . STEP
    (77) command -> . LOOK
    (70) procedure -> . PROC NAME LBR parameters RBR NEWLINE statements_group
    (71) procedure -> . PROC error
    (78) call -> . NAME LBR parameters RBR
    (90) call -> . NAME error
    (91) empty -> .
    (79) cell_proc -> . BAR LBR cell_arg RBR
    (80) cell_proc -> . EMP LBR cell_arg RBR
    (81) cell_proc -> . SET LBR cell_arg RBR
    (82) cell_proc -> . RESET LBR cell_arg RBR
    (83) cell_proc -> . CLR LBR cell_arg RBR
    (85) cell_proc -> . BAR error
    (86) cell_proc -> . EMP error
    (87) cell_proc -> . SET error
    (88) cell_proc -> . RESET error
    (89) cell_proc -> . CLR error
    (50) arithmetic_expression -> . INC first_ar second_ar
    (51) arithmetic_expression -> . DEC first_ar second_ar
    (29) type -> . INT
    (30) type -> . CINT
    (31) type -> . BOOLEAN
    (32) type -> . CBOOLEAN
    (35) name -> . NAME

    MAP             shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    IF              shift and go to state 19
    LEFT            shift and go to state 20
    RIGHT           shift and go to state 21
    BACK            shift and go to state 22
    STEP            shift and go to state 23
    LOOK            shift and go to state 24
    PROC            shift and go to state 25
    NAME            shift and go to state 26
    NEWLINE         reduce using rule 91 (empty -> .)
    BAR             shift and go to state 27
    EMP             shift and go to state 28
    SET             shift and go to state 29
    RESET           shift and go to state 30
    CLR             shift and go to state 31
    INC             shift and go to state 32
    DEC             shift and go to state 33
    INT             shift and go to state 34
    CINT            shift and go to state 35
    BOOLEAN         shift and go to state 36
    CBOOLEAN        shift and go to state 37

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    while                          shift and go to state 6
    if                             shift and go to state 7
    command                        shift and go to state 8
    procedure                      shift and go to state 9
    call                           shift and go to state 10
    empty                          shift and go to state 11
    cell_proc                      shift and go to state 12
    arithmetic_expression          shift and go to state 13
    type                           shift and go to state 14
    name                           shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (14) statements -> statements . statement
    (16) statement -> . declaration NEWLINE
    (17) statement -> . assignment NEWLINE
    (18) statement -> . while NEWLINE
    (19) statement -> . if NEWLINE
    (20) statement -> . command NEWLINE
    (21) statement -> . procedure NEWLINE
    (22) statement -> . call NEWLINE
    (23) statement -> . empty NEWLINE
    (24) statement -> . cell_proc NEWLINE
    (25) statement -> . arithmetic_expression NEWLINE
    (26) declaration -> . type name EQUALS expression
    (27) declaration -> . MAP name
    (28) declaration -> . type error
    (33) assignment -> . name EQUALS expression
    (34) assignment -> . name EQUALS error
    (65) while -> . WHILE logic_expression DO NEWLINE statements_group
    (66) while -> . DO error
    (67) while -> . WHILE error
    (68) if -> . IF logic_expression NEWLINE statements_group NEWLINE ELSE statements_group
    (69) if -> . IF error
    (72) command -> . command error
    (73) command -> . LEFT
    (74) command -> . RIGHT
    (75) command -> . BACK
    (76) command -> . STEP
    (77) command -> . LOOK
    (70) procedure -> . PROC NAME LBR parameters RBR NEWLINE statements_group
    (71) procedure -> . PROC error
    (78) call -> . NAME LBR parameters RBR
    (90) call -> . NAME error
    (91) empty -> .
    (79) cell_proc -> . BAR LBR cell_arg RBR
    (80) cell_proc -> . EMP LBR cell_arg RBR
    (81) cell_proc -> . SET LBR cell_arg RBR
    (82) cell_proc -> . RESET LBR cell_arg RBR
    (83) cell_proc -> . CLR LBR cell_arg RBR
    (85) cell_proc -> . BAR error
    (86) cell_proc -> . EMP error
    (87) cell_proc -> . SET error
    (88) cell_proc -> . RESET error
    (89) cell_proc -> . CLR error
    (50) arithmetic_expression -> . INC first_ar second_ar
    (51) arithmetic_expression -> . DEC first_ar second_ar
    (29) type -> . INT
    (30) type -> . CINT
    (31) type -> . BOOLEAN
    (32) type -> . CBOOLEAN
    (35) name -> . NAME

    $end            reduce using rule 1 (program -> statements .)
    MAP             shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    IF              shift and go to state 19
    LEFT            shift and go to state 20
    RIGHT           shift and go to state 21
    BACK            shift and go to state 22
    STEP            shift and go to state 23
    LOOK            shift and go to state 24
    PROC            shift and go to state 25
    NAME            shift and go to state 26
    NEWLINE         reduce using rule 91 (empty -> .)
    BAR             shift and go to state 27
    EMP             shift and go to state 28
    SET             shift and go to state 29
    RESET           shift and go to state 30
    CLR             shift and go to state 31
    INC             shift and go to state 32
    DEC             shift and go to state 33
    INT             shift and go to state 34
    CINT            shift and go to state 35
    BOOLEAN         shift and go to state 36
    CBOOLEAN        shift and go to state 37

    statement                      shift and go to state 38
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    while                          shift and go to state 6
    if                             shift and go to state 7
    command                        shift and go to state 8
    procedure                      shift and go to state 9
    call                           shift and go to state 10
    empty                          shift and go to state 11
    cell_proc                      shift and go to state 12
    arithmetic_expression          shift and go to state 13
    type                           shift and go to state 14
    name                           shift and go to state 15

state 3

    (15) statements -> statement .

    MAP             reduce using rule 15 (statements -> statement .)
    WHILE           reduce using rule 15 (statements -> statement .)
    DO              reduce using rule 15 (statements -> statement .)
    IF              reduce using rule 15 (statements -> statement .)
    LEFT            reduce using rule 15 (statements -> statement .)
    RIGHT           reduce using rule 15 (statements -> statement .)
    BACK            reduce using rule 15 (statements -> statement .)
    STEP            reduce using rule 15 (statements -> statement .)
    LOOK            reduce using rule 15 (statements -> statement .)
    PROC            reduce using rule 15 (statements -> statement .)
    NAME            reduce using rule 15 (statements -> statement .)
    BAR             reduce using rule 15 (statements -> statement .)
    EMP             reduce using rule 15 (statements -> statement .)
    SET             reduce using rule 15 (statements -> statement .)
    RESET           reduce using rule 15 (statements -> statement .)
    CLR             reduce using rule 15 (statements -> statement .)
    INC             reduce using rule 15 (statements -> statement .)
    DEC             reduce using rule 15 (statements -> statement .)
    INT             reduce using rule 15 (statements -> statement .)
    CINT            reduce using rule 15 (statements -> statement .)
    BOOLEAN         reduce using rule 15 (statements -> statement .)
    CBOOLEAN        reduce using rule 15 (statements -> statement .)
    NEWLINE         reduce using rule 15 (statements -> statement .)
    $end            reduce using rule 15 (statements -> statement .)
    RPAREN          reduce using rule 15 (statements -> statement .)


state 4

    (16) statement -> declaration . NEWLINE

    NEWLINE         shift and go to state 39


state 5

    (17) statement -> assignment . NEWLINE

    NEWLINE         shift and go to state 40


state 6

    (18) statement -> while . NEWLINE

    NEWLINE         shift and go to state 41


state 7

    (19) statement -> if . NEWLINE

    NEWLINE         shift and go to state 42


state 8

    (20) statement -> command . NEWLINE
    (72) command -> command . error

    NEWLINE         shift and go to state 43
    error           shift and go to state 44


state 9

    (21) statement -> procedure . NEWLINE

    NEWLINE         shift and go to state 45


state 10

    (22) statement -> call . NEWLINE

    NEWLINE         shift and go to state 46


state 11

    (23) statement -> empty . NEWLINE

    NEWLINE         shift and go to state 47


state 12

    (24) statement -> cell_proc . NEWLINE

    NEWLINE         shift and go to state 48


state 13

    (25) statement -> arithmetic_expression . NEWLINE

    NEWLINE         shift and go to state 49


state 14

    (26) declaration -> type . name EQUALS expression
    (28) declaration -> type . error
    (35) name -> . NAME

    error           shift and go to state 51
    NAME            shift and go to state 52

    name                           shift and go to state 50

state 15

    (33) assignment -> name . EQUALS expression
    (34) assignment -> name . EQUALS error

    EQUALS          shift and go to state 53


state 16

    (27) declaration -> MAP . name
    (35) name -> . NAME

    NAME            shift and go to state 52

    name                           shift and go to state 54

state 17

    (65) while -> WHILE . logic_expression DO NEWLINE statements_group
    (67) while -> WHILE . error
    (45) logic_expression -> . LT expression expression
    (46) logic_expression -> . GT expression expression
    (47) logic_expression -> . NOT expression
    (48) logic_expression -> . NOT call
    (49) logic_expression -> . OR or_arg or_arg

    error           shift and go to state 56
    LT              shift and go to state 57
    GT              shift and go to state 58
    NOT             shift and go to state 59
    OR              shift and go to state 60

    logic_expression               shift and go to state 55

state 18

    (66) while -> DO . error

    error           shift and go to state 61


state 19

    (68) if -> IF . logic_expression NEWLINE statements_group NEWLINE ELSE statements_group
    (69) if -> IF . error
    (45) logic_expression -> . LT expression expression
    (46) logic_expression -> . GT expression expression
    (47) logic_expression -> . NOT expression
    (48) logic_expression -> . NOT call
    (49) logic_expression -> . OR or_arg or_arg

    error           shift and go to state 63
    LT              shift and go to state 57
    GT              shift and go to state 58
    NOT             shift and go to state 59
    OR              shift and go to state 60

    logic_expression               shift and go to state 62

state 20

    (73) command -> LEFT .

    NEWLINE         reduce using rule 73 (command -> LEFT .)
    error           reduce using rule 73 (command -> LEFT .)
    RPAREN          reduce using rule 73 (command -> LEFT .)
    NAME            reduce using rule 73 (command -> LEFT .)
    TRUE            reduce using rule 73 (command -> LEFT .)
    FALSE           reduce using rule 73 (command -> LEFT .)
    NUMBER          reduce using rule 73 (command -> LEFT .)
    LT              reduce using rule 73 (command -> LEFT .)
    GT              reduce using rule 73 (command -> LEFT .)
    NOT             reduce using rule 73 (command -> LEFT .)
    OR              reduce using rule 73 (command -> LEFT .)
    INC             reduce using rule 73 (command -> LEFT .)
    DEC             reduce using rule 73 (command -> LEFT .)
    LEFT            reduce using rule 73 (command -> LEFT .)
    RIGHT           reduce using rule 73 (command -> LEFT .)
    BACK            reduce using rule 73 (command -> LEFT .)
    STEP            reduce using rule 73 (command -> LEFT .)
    LOOK            reduce using rule 73 (command -> LEFT .)
    DO              reduce using rule 73 (command -> LEFT .)


state 21

    (74) command -> RIGHT .

    NEWLINE         reduce using rule 74 (command -> RIGHT .)
    error           reduce using rule 74 (command -> RIGHT .)
    RPAREN          reduce using rule 74 (command -> RIGHT .)
    NAME            reduce using rule 74 (command -> RIGHT .)
    TRUE            reduce using rule 74 (command -> RIGHT .)
    FALSE           reduce using rule 74 (command -> RIGHT .)
    NUMBER          reduce using rule 74 (command -> RIGHT .)
    LT              reduce using rule 74 (command -> RIGHT .)
    GT              reduce using rule 74 (command -> RIGHT .)
    NOT             reduce using rule 74 (command -> RIGHT .)
    OR              reduce using rule 74 (command -> RIGHT .)
    INC             reduce using rule 74 (command -> RIGHT .)
    DEC             reduce using rule 74 (command -> RIGHT .)
    LEFT            reduce using rule 74 (command -> RIGHT .)
    RIGHT           reduce using rule 74 (command -> RIGHT .)
    BACK            reduce using rule 74 (command -> RIGHT .)
    STEP            reduce using rule 74 (command -> RIGHT .)
    LOOK            reduce using rule 74 (command -> RIGHT .)
    DO              reduce using rule 74 (command -> RIGHT .)


state 22

    (75) command -> BACK .

    NEWLINE         reduce using rule 75 (command -> BACK .)
    error           reduce using rule 75 (command -> BACK .)
    RPAREN          reduce using rule 75 (command -> BACK .)
    NAME            reduce using rule 75 (command -> BACK .)
    TRUE            reduce using rule 75 (command -> BACK .)
    FALSE           reduce using rule 75 (command -> BACK .)
    NUMBER          reduce using rule 75 (command -> BACK .)
    LT              reduce using rule 75 (command -> BACK .)
    GT              reduce using rule 75 (command -> BACK .)
    NOT             reduce using rule 75 (command -> BACK .)
    OR              reduce using rule 75 (command -> BACK .)
    INC             reduce using rule 75 (command -> BACK .)
    DEC             reduce using rule 75 (command -> BACK .)
    LEFT            reduce using rule 75 (command -> BACK .)
    RIGHT           reduce using rule 75 (command -> BACK .)
    BACK            reduce using rule 75 (command -> BACK .)
    STEP            reduce using rule 75 (command -> BACK .)
    LOOK            reduce using rule 75 (command -> BACK .)
    DO              reduce using rule 75 (command -> BACK .)


state 23

    (76) command -> STEP .

    NEWLINE         reduce using rule 76 (command -> STEP .)
    error           reduce using rule 76 (command -> STEP .)
    RPAREN          reduce using rule 76 (command -> STEP .)
    NAME            reduce using rule 76 (command -> STEP .)
    TRUE            reduce using rule 76 (command -> STEP .)
    FALSE           reduce using rule 76 (command -> STEP .)
    NUMBER          reduce using rule 76 (command -> STEP .)
    LT              reduce using rule 76 (command -> STEP .)
    GT              reduce using rule 76 (command -> STEP .)
    NOT             reduce using rule 76 (command -> STEP .)
    OR              reduce using rule 76 (command -> STEP .)
    INC             reduce using rule 76 (command -> STEP .)
    DEC             reduce using rule 76 (command -> STEP .)
    LEFT            reduce using rule 76 (command -> STEP .)
    RIGHT           reduce using rule 76 (command -> STEP .)
    BACK            reduce using rule 76 (command -> STEP .)
    STEP            reduce using rule 76 (command -> STEP .)
    LOOK            reduce using rule 76 (command -> STEP .)
    DO              reduce using rule 76 (command -> STEP .)


state 24

    (77) command -> LOOK .

    NEWLINE         reduce using rule 77 (command -> LOOK .)
    error           reduce using rule 77 (command -> LOOK .)
    RPAREN          reduce using rule 77 (command -> LOOK .)
    NAME            reduce using rule 77 (command -> LOOK .)
    TRUE            reduce using rule 77 (command -> LOOK .)
    FALSE           reduce using rule 77 (command -> LOOK .)
    NUMBER          reduce using rule 77 (command -> LOOK .)
    LT              reduce using rule 77 (command -> LOOK .)
    GT              reduce using rule 77 (command -> LOOK .)
    NOT             reduce using rule 77 (command -> LOOK .)
    OR              reduce using rule 77 (command -> LOOK .)
    INC             reduce using rule 77 (command -> LOOK .)
    DEC             reduce using rule 77 (command -> LOOK .)
    LEFT            reduce using rule 77 (command -> LOOK .)
    RIGHT           reduce using rule 77 (command -> LOOK .)
    BACK            reduce using rule 77 (command -> LOOK .)
    STEP            reduce using rule 77 (command -> LOOK .)
    LOOK            reduce using rule 77 (command -> LOOK .)
    DO              reduce using rule 77 (command -> LOOK .)


state 25

    (70) procedure -> PROC . NAME LBR parameters RBR NEWLINE statements_group
    (71) procedure -> PROC . error

    NAME            shift and go to state 64
    error           shift and go to state 65


state 26

    (78) call -> NAME . LBR parameters RBR
    (90) call -> NAME . error
    (35) name -> NAME .

    LBR             shift and go to state 66
    error           shift and go to state 67
    EQUALS          reduce using rule 35 (name -> NAME .)
    DO              reduce using rule 35 (name -> NAME .)
    NEWLINE         reduce using rule 35 (name -> NAME .)
    RPAREN          reduce using rule 35 (name -> NAME .)
    NAME            reduce using rule 35 (name -> NAME .)
    TRUE            reduce using rule 35 (name -> NAME .)
    FALSE           reduce using rule 35 (name -> NAME .)
    NUMBER          reduce using rule 35 (name -> NAME .)
    LT              reduce using rule 35 (name -> NAME .)
    GT              reduce using rule 35 (name -> NAME .)
    NOT             reduce using rule 35 (name -> NAME .)
    OR              reduce using rule 35 (name -> NAME .)
    INC             reduce using rule 35 (name -> NAME .)
    DEC             reduce using rule 35 (name -> NAME .)
    LEFT            reduce using rule 35 (name -> NAME .)
    RIGHT           reduce using rule 35 (name -> NAME .)
    BACK            reduce using rule 35 (name -> NAME .)
    STEP            reduce using rule 35 (name -> NAME .)
    LOOK            reduce using rule 35 (name -> NAME .)


state 27

    (79) cell_proc -> BAR . LBR cell_arg RBR
    (85) cell_proc -> BAR . error

    LBR             shift and go to state 68
    error           shift and go to state 69


state 28

    (80) cell_proc -> EMP . LBR cell_arg RBR
    (86) cell_proc -> EMP . error

    LBR             shift and go to state 70
    error           shift and go to state 71


state 29

    (81) cell_proc -> SET . LBR cell_arg RBR
    (87) cell_proc -> SET . error

    LBR             shift and go to state 72
    error           shift and go to state 73


state 30

    (82) cell_proc -> RESET . LBR cell_arg RBR
    (88) cell_proc -> RESET . error

    LBR             shift and go to state 74
    error           shift and go to state 75


state 31

    (83) cell_proc -> CLR . LBR cell_arg RBR
    (89) cell_proc -> CLR . error

    LBR             shift and go to state 76
    error           shift and go to state 77


state 32

    (50) arithmetic_expression -> INC . first_ar second_ar
    (52) first_ar -> . name
    (53) first_ar -> . arithmetic_expression
    (54) first_ar -> . call
    (35) name -> . NAME
    (50) arithmetic_expression -> . INC first_ar second_ar
    (51) arithmetic_expression -> . DEC first_ar second_ar
    (78) call -> . NAME LBR parameters RBR
    (90) call -> . NAME error

    NAME            shift and go to state 82
    INC             shift and go to state 32
    DEC             shift and go to state 33

    first_ar                       shift and go to state 78
    name                           shift and go to state 79
    arithmetic_expression          shift and go to state 80
    call                           shift and go to state 81

state 33

    (51) arithmetic_expression -> DEC . first_ar second_ar
    (52) first_ar -> . name
    (53) first_ar -> . arithmetic_expression
    (54) first_ar -> . call
    (35) name -> . NAME
    (50) arithmetic_expression -> . INC first_ar second_ar
    (51) arithmetic_expression -> . DEC first_ar second_ar
    (78) call -> . NAME LBR parameters RBR
    (90) call -> . NAME error

    NAME            shift and go to state 82
    INC             shift and go to state 32
    DEC             shift and go to state 33

    first_ar                       shift and go to state 83
    name                           shift and go to state 79
    arithmetic_expression          shift and go to state 80
    call                           shift and go to state 81

state 34

    (29) type -> INT .

    error           reduce using rule 29 (type -> INT .)
    NAME            reduce using rule 29 (type -> INT .)


state 35

    (30) type -> CINT .

    error           reduce using rule 30 (type -> CINT .)
    NAME            reduce using rule 30 (type -> CINT .)


state 36

    (31) type -> BOOLEAN .

    error           reduce using rule 31 (type -> BOOLEAN .)
    NAME            reduce using rule 31 (type -> BOOLEAN .)


state 37

    (32) type -> CBOOLEAN .

    error           reduce using rule 32 (type -> CBOOLEAN .)
    NAME            reduce using rule 32 (type -> CBOOLEAN .)


state 38

    (14) statements -> statements statement .

    MAP             reduce using rule 14 (statements -> statements statement .)
    WHILE           reduce using rule 14 (statements -> statements statement .)
    DO              reduce using rule 14 (statements -> statements statement .)
    IF              reduce using rule 14 (statements -> statements statement .)
    LEFT            reduce using rule 14 (statements -> statements statement .)
    RIGHT           reduce using rule 14 (statements -> statements statement .)
    BACK            reduce using rule 14 (statements -> statements statement .)
    STEP            reduce using rule 14 (statements -> statements statement .)
    LOOK            reduce using rule 14 (statements -> statements statement .)
    PROC            reduce using rule 14 (statements -> statements statement .)
    NAME            reduce using rule 14 (statements -> statements statement .)
    BAR             reduce using rule 14 (statements -> statements statement .)
    EMP             reduce using rule 14 (statements -> statements statement .)
    SET             reduce using rule 14 (statements -> statements statement .)
    RESET           reduce using rule 14 (statements -> statements statement .)
    CLR             reduce using rule 14 (statements -> statements statement .)
    INC             reduce using rule 14 (statements -> statements statement .)
    DEC             reduce using rule 14 (statements -> statements statement .)
    INT             reduce using rule 14 (statements -> statements statement .)
    CINT            reduce using rule 14 (statements -> statements statement .)
    BOOLEAN         reduce using rule 14 (statements -> statements statement .)
    CBOOLEAN        reduce using rule 14 (statements -> statements statement .)
    NEWLINE         reduce using rule 14 (statements -> statements statement .)
    $end            reduce using rule 14 (statements -> statements statement .)
    RPAREN          reduce using rule 14 (statements -> statements statement .)


state 39

    (16) statement -> declaration NEWLINE .

    MAP             reduce using rule 16 (statement -> declaration NEWLINE .)
    WHILE           reduce using rule 16 (statement -> declaration NEWLINE .)
    DO              reduce using rule 16 (statement -> declaration NEWLINE .)
    IF              reduce using rule 16 (statement -> declaration NEWLINE .)
    LEFT            reduce using rule 16 (statement -> declaration NEWLINE .)
    RIGHT           reduce using rule 16 (statement -> declaration NEWLINE .)
    BACK            reduce using rule 16 (statement -> declaration NEWLINE .)
    STEP            reduce using rule 16 (statement -> declaration NEWLINE .)
    LOOK            reduce using rule 16 (statement -> declaration NEWLINE .)
    PROC            reduce using rule 16 (statement -> declaration NEWLINE .)
    NAME            reduce using rule 16 (statement -> declaration NEWLINE .)
    BAR             reduce using rule 16 (statement -> declaration NEWLINE .)
    EMP             reduce using rule 16 (statement -> declaration NEWLINE .)
    SET             reduce using rule 16 (statement -> declaration NEWLINE .)
    RESET           reduce using rule 16 (statement -> declaration NEWLINE .)
    CLR             reduce using rule 16 (statement -> declaration NEWLINE .)
    INC             reduce using rule 16 (statement -> declaration NEWLINE .)
    DEC             reduce using rule 16 (statement -> declaration NEWLINE .)
    INT             reduce using rule 16 (statement -> declaration NEWLINE .)
    CINT            reduce using rule 16 (statement -> declaration NEWLINE .)
    BOOLEAN         reduce using rule 16 (statement -> declaration NEWLINE .)
    CBOOLEAN        reduce using rule 16 (statement -> declaration NEWLINE .)
    NEWLINE         reduce using rule 16 (statement -> declaration NEWLINE .)
    $end            reduce using rule 16 (statement -> declaration NEWLINE .)
    RPAREN          reduce using rule 16 (statement -> declaration NEWLINE .)


state 40

    (17) statement -> assignment NEWLINE .

    MAP             reduce using rule 17 (statement -> assignment NEWLINE .)
    WHILE           reduce using rule 17 (statement -> assignment NEWLINE .)
    DO              reduce using rule 17 (statement -> assignment NEWLINE .)
    IF              reduce using rule 17 (statement -> assignment NEWLINE .)
    LEFT            reduce using rule 17 (statement -> assignment NEWLINE .)
    RIGHT           reduce using rule 17 (statement -> assignment NEWLINE .)
    BACK            reduce using rule 17 (statement -> assignment NEWLINE .)
    STEP            reduce using rule 17 (statement -> assignment NEWLINE .)
    LOOK            reduce using rule 17 (statement -> assignment NEWLINE .)
    PROC            reduce using rule 17 (statement -> assignment NEWLINE .)
    NAME            reduce using rule 17 (statement -> assignment NEWLINE .)
    BAR             reduce using rule 17 (statement -> assignment NEWLINE .)
    EMP             reduce using rule 17 (statement -> assignment NEWLINE .)
    SET             reduce using rule 17 (statement -> assignment NEWLINE .)
    RESET           reduce using rule 17 (statement -> assignment NEWLINE .)
    CLR             reduce using rule 17 (statement -> assignment NEWLINE .)
    INC             reduce using rule 17 (statement -> assignment NEWLINE .)
    DEC             reduce using rule 17 (statement -> assignment NEWLINE .)
    INT             reduce using rule 17 (statement -> assignment NEWLINE .)
    CINT            reduce using rule 17 (statement -> assignment NEWLINE .)
    BOOLEAN         reduce using rule 17 (statement -> assignment NEWLINE .)
    CBOOLEAN        reduce using rule 17 (statement -> assignment NEWLINE .)
    NEWLINE         reduce using rule 17 (statement -> assignment NEWLINE .)
    $end            reduce using rule 17 (statement -> assignment NEWLINE .)
    RPAREN          reduce using rule 17 (statement -> assignment NEWLINE .)


state 41

    (18) statement -> while NEWLINE .
